# crewai-playground

./: .gitignore  README.md  crewai_flow.html  report.md  requirements.txt
stock_analysis/: .env.sample  LICENSE  README.md  crewai_flow.html  pyproject.toml  report.md
stock_analysis/src/: config.py  llm.py
stock_analysis/src/stock_analysis/: main.py
stock_analysis/src/stock_analysis/crews/stock_analysis_crew/: stock_analysis_crew.py
stock_analysis/src/stock_analysis/crews/stock_analysis_crew/config/: agents.yaml  tasks.yaml
stock_analysis/src/stock_analysis/tools/: stock_info_tool.py
