[project]
name = "stock_analysis"
version = "0.1.0"
description = "stock_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "llama-index==0.12.3",
    "promptflow==1.16.2",
    "yfinance[nospam]==0.2.50",
    "langtrace-python-sdk==3.3.13",
]

[project.scripts]
kickoff = "stock_analysis.main:kickoff"
plot = "stock_analysis.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
